# Helm

./: .env.example  .gitignore  README.md  README_zh.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  celerybeat-schedule.dir  cli.py  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0ae7658bbb38_initial.py  a1b2c3d4e5f6_sde_type_updated_at_timezone.py  a1b2c3d4e5f7_add_character_corporation_alliance_timestamps.py  b2c3d4e5f6a7_add_task_runs.py  c1d2e3f4a5b6_add_player_structures.py  c608e1e7ad78_phase3_plugins_table.py  d3f7a9b2c1e4_add_is_primary_to_characters.py  d4e5f6a7b8c9_add_character_contracts.py  e5f6a7b8c9d0_add_character_killmails.py  e9bb4834a3e7_phase2_corp_alliance_bucket_apitoken_sde.py  f4fe5a7e15dd_sde_create_type_group_category.py
backend/app/: cache.py  main.py
backend/app/core/: api_auth.py  bucket.py  config.py  database.py  permissions.py  redis.py  security.py  setup_token.py  token_persist.py
backend/app/esi/: cache.py  client.py  oauth.py
backend/app/models/: __init__.py  alliance.py  api_token.py  bucket.py  character.py  corporation.py  esi_data.py  plugin.py  rbac.py  sde.py  task_run.py  user.py
backend/app/plugins/: _migration_runner.py  base.py  events.py  installer.py  loader.py  manager.py  marketplace.py  registry.py
backend/app/routers/: admin.py  admin_market.py  admin_tasks.py  alliances.py  api_tokens.py  auth.py  characters.py  corporations.py  market.py  plugin_ui.py  (+2 more)
backend/scripts/: fix_plugin_alembic_state.sql
(+128 files in other folders)
